src/test/deca/syntax/invalid/sansobjet/if_else_elsif.deca
{

	if( 1 > 2){
	
	}else{
	}else if( 2 < 3 ){
			
	}
	
}